# pywiki

./: .env.example  .gitignore  CHANGELOG.md  ENHANCEMENTS.md  Makefile  README.md  SKILLS.md  TODO.md  alembic.ini  pyproject.toml  pywiki.db  requirements.txt
alembic/: env.py
alembic/versions/: 58579c489d29_add_fts_gin_index.py  a1b2c3d4e5f6_add_email_verification.py  b7ed900152d9_initial_schema.py
app/: _version.py  main.py
app/core/: config.py  database.py  logging_buffer.py  security.py
app/models/: __init__.py  models.py
app/routes/: admin.py  attachments.py  auth.py  namespaces.py  pages.py  render.py  search.py
app/schemas/: __init__.py  schemas.py
app/services/: attachments.py  email.py  namespaces.py  pages.py  renderer.py  users.py
app/templates/: base.html  category.html  error.html  forgot_password.html  home.html  login.html  ns_list.html  (+25 more)
deploy/: .env.example  01_add_user.sh  02_setup_db.sh  03_setup_service.sh  Makefile  README.md  nginx-pywiki.conf  pywiki.service  requirements.txt
docs/: colour-text.md  deployment.md
release_notes/: v0.1.0.md  v0.1.1.md  v0.1.3.md  v0.1.5.md  v0.2.0.md  v0.2.1.md  v0.2.2.md  v0.2.3.md  v0.2.4.md  v0.2.5.md  v0.3.0.md  v0.3.1.md  v0.4.0.md  v0.5.0.md  v0.5.1.md  v0.5.2.md  v0.6.0.md  v0.6.1.md  v0.6.2.md  v0.6.3.md  v0.6.4.md  v0.6.5.md  v0.6.6.md  v0.6.7.md  v0.6.8.md  v0.6.9.md
scripts/: check_user.py  clear.py  gen_pygments_css.py  import_mediawiki.py  setup-jose.sh  tst_img_css_float.py
sql/: grant.sql
tests/: conftest.py  test_01_auth.py  test_02_namespaces.py  test_03_pages.py  test_04_features.py  test_05_page_move.py  test_06_redirects.py  test_07_users_ui.py  test_08_namespaces_ui.py  test_09_user_profile.py  test_10_wikitext_tables.py  test_11_search.py  test_12_syntax_highlight.py  test_13_toc.py  test_14_images.py  test_15_email.py  test_16_refs.py  test_17_math.py  test_18_import_export.py  test_19_page_delete.py
tools/: test_smtp.py
(+5 files in other folders)
